--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
+    "build:prod": "next build",
     "start": "next start",
     "lint": "next lint",
     "deploy:vercel": "node scripts/deploy.js",
@@ -39,6 +40,7 @@
     "mipd": "^0.0.7",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
